# Gaming-System-AI-Core

./: .coverage  .cursor-settings.json  .cursorrules  .cursorrules-complex-tasks  .cursorrules-global-integration  .cursorrules.txt  .env.backup  .env.example  .gitattributes  .gitignore  .ue5-build-config.json  100-PERCENT-COMPLETE-FINAL.md  ALL-TASKS-STATUS.md  ALL-WORK-COMPLETE-2025-11-13.md  ARCHETYPE-SYSTEM-STATUS.md  AUTOMATED-SETUP.ps1  BREAKTHROUGH-NATS-OPERATIONAL.md  COMPLETE-DEPLOYMENT-VALIDATION-2025-11-11.md  COMPLETE-SESSION-2-ALL-WORK-FINISHED.md  COMPLETE-SYSTEM-REFERENCE.md  DEPLOYMENT-COMPLETE-2025-11-11.md  DEPLOYMENT-STATUS.md  DEPLOYMENT-SUCCESS.md  DEPLOYMENT-SUMMARY-2025-11-13.md  Dockerfile  EXECUTIVE-SUMMARY-NATS-2025-11-13.md  FINAL-HANDOFF-COMPLETE-2025-11-13.md  FINAL-SESSION-2-COMPLETE-SUMMARY.md  FINAL-STATUS-REPORT.md  GPU-TRAINING-AUTOMATION.md  GPU-TRAINING-VERIFICATION-MANUAL-STEPS.md  HANDOFF-ETHELRED-COMPREHENSIVE-2025-11-13.md  HANDOFF-GPU-TRAINING.md  HANDOFF-NATS-FINAL-2025-11-13.md  HANDOFF-PROMPT-2025-11-03.md  HANDOFF-PROMPT.md  HANDOFF-TO-NEXT-SESSION.md  IMMERSIVE-SYSTEM-COMPLETE.md  MILESTONE-45MIN-COMPLETE.md  MILESTONE-ACTIVE-45MIN.md  (+85 more)
.cursor/: .globals_linked  check_key_header.py  context-last-check.json  context-monitor.running  context-window-monitor.ps1  context-window-rules.md  cursor-settings.json  file-listing-prohibition-rules.md  file-listing-prohibition.running  fix_pem_encoding.py  instance_i-06f3.json  instance_i-080f.json  instance_i-0a74.json  instance_i-0f27.json  keypairs.json  list_keypairs.py  remote_cmd.sh  run_setup_script.ps1  run_ssh_command.ps1  scp_remote_cmd.ps1  scp_setup_script.ps1  select_latest_image.py  session-summary.json  sg_gaming_system.json  ssh_tail_log.ps1  ssh_uname.ps1  startup-complete.marker  summarize_instances.py  timer-service.running  timer-session-id.txt  tmp_instances.json  tmp_instances2.json  trigger-clean-session.flag  ubuntu_images.json  ue5_block_device.json  ue5_instance_tags.json  volume_vol-06827.json  write_remote_command.py
.github/: services.json
.logs/: test-results-20251105-115625.txt
Docker-Template/: Dockerfile.api  Dockerfile.frontend  docker-compose.dev.yml  docker-compose.yml  email-config.env
Global-Docs/: AI-COLLABORATIVE-AUTHORING-SYSTEM.md  API-Keys-Configured.md  AWS-SES-EMAIL-INTEGRATION.md  COMPREHENSIVE-MODEL-UPDATE-2025-11-19.md  CRITICAL-VS2026-UPDATE.md  Complex-Solution-Methodology.md  Comprehensive-Crash-Protection-System.md  Conservative-Project-Specific-File-Handling.md  Development-Environment-Configuration.md  EXA-MCP-SERVER-SETUP.md  Hardware-Integration-Framework.md  MODEL-SYSTEM-COMPLETE.md  MODEL-UPDATE-SUMMARY.md  MULTI-TENANT-DEPLOYMENT.md  Multi-Tenant-Deployment-Guide.md  Occupied-Ports.md  OpenRouter-AI-MCP-Complete-Guide.md  PEER-REVIEW-MODEL-REGISTRY-COMPLETE.md  PERPLEXITY-ASK-MCP-SERVER-SETUP.md  Rule-Compliance-System.md  SRL-RLVR-TRAINING-SYSTEM-COMPLETE.md  SRL-RLVR-TRAINING-SYSTEM.md  SYSTEMD-DAEMON-SETUP.md  Security-Implementation-Framework.md  Universal-Model-Rankings.md  Universal-Model-Registry.md  Universal-Model-Registry.md.backup-pre-complete-update-20251119114311  model-management-integration-patterns.md  session-monitoring-pattern.md
Global-History/: 2025-10-18-watchdog-violation-incident.md  2025-10-19-innovation-forge-deployment.md  2025-10-20-functional-fitness-usa-production-session.md  2025-11-19-VS2026-DISCOVERY.md  2025-11-20-CRITICAL-SECURITY-INCIDENT-API-KEYS-EXPOSED.md  VS2026-Installation-Success.md  all-rules-work-visibility-clarification.md  event-driven-architecture-patterns.md  kicad-9-api-changes-solution.md  kicad-9-load-real-footprints-solution.md  kicad-9-wxwidgets-initialization-solution.md  kicad-ipc-api-limitations-2025-11-06.md  mixed-content-https-http-errors.md  nextjs-production-build-failures.md  pm2-env-vars-not-loading.md  (+4 more)
vocal-chord-research/cpp-implementation/: BUILD-STATUS-2025-11-10.md  BUILD.md  CMakeLists.txt  IMPLEMENTATION-STATUS.md  INSTALL-DEPENDENCIES-WINDOWS.md  README.md
vocal-chord-research/cpp-implementation/benchmarks/: CMakeLists.txt  bench_mid_lod_kernel.cpp  bench_parameter_smoother.cpp  bench_tpt_svf.cpp
vocal-chord-research/cpp-implementation/bindings/python/: CMakeLists.txt  README.md  test_bindings.py  vocal_synthesis_py.cpp
vocal-chord-research/cpp-implementation/cmake/: VocalSynthesisConfig.cmake.in  dependencies.cmake
vocal-chord-research/cpp-implementation/docs/: COMPILATION-ERRORS-AND-FIXES.md  FINAL-COMPREHENSIVE-SUMMARY-2025-11-10.md  FINAL-DECISION.md  PHASE-2A-COMPLETE-2025-11-10.md  PROGRESS-REPORT-CRITICAL-FIXES-2025-11-10.md  RAII-COMPLIANCE-AUDIT.md  SESSION-SUMMARY-2025-11-10-PEER-REVIEW.md  VOCAL-CHORD-EMULATION-RESEARCH-BRIEF.md
vocal-chord-research/cpp-implementation/include/vocal_synthesis/: aberration_params_v2.hpp  audio_buffer.hpp  mid_lod_kernel.hpp  types.hpp
vocal-chord-research/cpp-implementation/include/vocal_synthesis/dsp/: breathiness.hpp  corporeal_noise.hpp  denormal_handling.hpp  glottal_incoherence.hpp  parameter_smoother.hpp  pitch_stabilizer.hpp  roughness.hpp  subharmonic_generator.hpp  subliminal_audio.hpp  tpt_svf.hpp
vocal-chord-research/cpp-implementation/include/vocal_synthesis/rt_safe/: parameter_pipeline.hpp
vocal-chord-research/cpp-implementation/include/vocal_synthesis/types/: strong_types.hpp
vocal-chord-research/cpp-implementation/src/core/: aberration_params_v2.cpp  audio_buffer.cpp  mid_lod_kernel.cpp
vocal-chord-research/cpp-implementation/src/dsp/: breathiness.cpp  corporeal_noise.cpp  denormal_handling.cpp  glottal_incoherence.cpp  parameter_smoother.cpp  pitch_stabilizer.cpp  roughness.cpp  subharmonic_generator.cpp  subliminal_audio.cpp  tpt_svf.cpp
vocal-chord-research/cpp-implementation/test-logs/: README.md
vocal-chord-research/cpp-implementation/tests/: CMakeLists.txt  test_audio_buffer.cpp  test_mid_lod_integration.cpp  test_parameter_smoother.cpp  test_rt_parameter_pipeline.cpp
vocal-chord-research/cpp-implementation/tests/integration/: run_integration_tests.py  test_full_pipeline.cpp
(+2914 files in other folders)
